@@ -1,3 +1,8 @@
+2007-04-13  Dave Morrison  <drm@finkproject.org>
+
+	* VirtPackage.pm: Parse a greater variety of Version strings from the 
+	X server.
+
 2007-04-13  Daniel Macks  <dmacks@netspace.org>
 
 	* SelfUpdate.pm: Standardize terminology as selfupdate "method";
